<resources>
    <string name="app_name">School Dashboard</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="start">Start</string>
    <string name="url">URL</string>
    <string name="expo">expo</string>

    <string name="about_name">برنامه نویسان:</string>
    <string name="hmr_name">حمیدرضا ضیایی</string>
    <string name="mn_name">مصطفی نعمتی</string>
    <string name="dev_apps">سایر برنامه های ما در کافه بازار</string>

    <string name="menu_light">Light Theme</string>
    <string name="menu_dark">Dark Theme</string>
    <string name="menu_exit">Exit</string>
</resources>