<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:padding="15dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_sites"
        android:layout_width="65dp"
        android:layout_height="75dp"
        app:civ_border_width="2dp"
        app:civ_border_color="#FF000000"/>
    <LinearLayout
        android:layout_marginStart="25dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_sites"
            android:textSize="22sp"
            tools:text="@string/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_url"
            android:textSize="15sp"
            tools:text="@string/url"
            android:layout_gravity="end"
            android:layout_marginTop="3dp"
            android:textColor="@color/blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_expo"
            android:textSize="12sp"
            tools:text="@string/expo"
            android:layout_marginTop="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>